8358529: GenShen: Heuristics do not respond to changes in SoftMaxHeapSize